--- a/SIPAT/index.html
+++ b/SIPAT/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       color: #fff;
       text-align: center;
-      background: #d35400 url('tijolos-luz.png') repeat; /* imagem de tijolinhos com pontos de luz */
+      background: #d35400 url('tijolos-luz.png') repeat; /* imagem de tijolos alaranjados com pontos de luz */
       position: relative;
       overflow-x: hidden;
     }
@@ -80,6 +80,15 @@
 
     .input-group {
       margin: 20px 0;
+    }
+
+    /* Estilo do label */
+    label {
+      display: block;
+      margin-bottom: 12px;  /* Espaço maior entre o texto e o campo */
+      font-size: 1.3rem;    /* Fonte maior */
+      font-weight: bold;    /* Letra mais gordinha */
+      color: #ffd600;       /* Amarelo destaque */
     }
 
     input {
@@ -173,7 +182,7 @@
 
   <main>
     <div class="input-group">
-      <label for="maxParticipantes">Número máximo de participantes:</label><br>
+      <label for="maxParticipantes">Número máximo de participantes:</label>
       <input type="number" id="maxParticipantes" min="1">
     </div>
 
@@ -209,13 +218,23 @@
   <script>
     let sorteados = [];
     let max = 0;
+    let bloqueado = false; // impede alterar o input após o sorteio
 
     function sortear() {
+      if (bloqueado) {
+        alert("O número máximo de participantes já foi definido. Resete o sorteio para alterar.");
+        return;
+      }
+
       max = parseInt(document.getElementById('maxParticipantes').value);
       if (!max || max < 1) {
         alert("Digite um número válido de participantes.");
         return;
       }
+
+      // Bloquear campo após a primeira vez
+      document.getElementById('maxParticipantes').disabled = true;
+      bloqueado = true;
 
       if (sorteados.length >= max) {
         alert("Todos os números já foram sorteados!");
@@ -244,6 +263,8 @@
     function resetar() {
       sorteados = [];
       max = 0;
+      bloqueado = false;
+      document.getElementById('maxParticipantes').disabled = false;
       document.getElementById('maxParticipantes').value = "";
       document.getElementById('resultado').textContent = "---";
       document.getElementById('listaSorteados').textContent = "Nenhum número sorteado ainda.";
