--- a/index.html
+++ b/index.html
@@ -3,203 +3,172 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SIPAT - Sorteador</title>
+  <title>Sorteador Web - SIPAT 2025</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
+      font-family: Arial, sans-serif;
       color: #fff;
-      text-align: center;
-      background: #d35400 url('tijolos-luz.png') repeat; /* imagem de tijolinhos com pontos de luz */
-      position: relative;
-      overflow-x: hidden;
+      background: #d35400 url('https://i.imgur.com/w3hYJ6X.png'); /* tijolinhos laranja */
+      background-size: 200px;
+      background-blend-mode: multiply;
     }
-
-    /* Faixas de interdição laterais */
-    body::before, body::after {
-      content: "";
-      position: fixed;
-      top: 0;
-      width: 40px;
-      height: 100%;
-      background: repeating-linear-gradient(
-        45deg,
-        #000,
-        #000 20px,
-        #fdd835 20px,
-        #fdd835 40px
-      );
-      z-index: 5;
-    }
-    body::before { left: 0; }
-    body::after { right: 0; }
 
     header {
-      background: rgba(217, 76, 11, 0.95);
-      margin: 20px;
-      padding: 20px;
-      border-radius: 15px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      background: rgba(0, 0, 0, 0.7);
+      margin: 15px;
+      padding: 15px;
+      border-radius: 10px;
+      position: relative;
     }
 
-    /* Logo CIPA lado esquerdo */
-    .logo-cipa {
+    header img {
+      height: 100px;
+    }
+
+    #logoCipa {
       width: 100px;
       height: 100px;
       object-fit: contain;
     }
 
-    /* Título centralizado */
-    .titulo {
-      flex: 1;
-      text-align: center;
-    }
-    .titulo h1 {
-      margin: 0;
-      font-size: 2.5rem;
-      font-weight: bold;
-    }
-    .titulo h2 {
-      margin: 5px 0 0;
-      font-size: 1.2rem;
-      font-weight: normal;
-    }
-
-    /* Capacete lado direito */
-    .img-topo {
-      width: 150px;
-      height: auto;
+    #equipamentos {
+      height: 100px;
     }
 
     main {
-      padding: 30px 20px;
-      margin: 0 60px; /* não encostar nas bordas */
+      text-align: center;
+      margin: 20px;
     }
 
-    .input-group {
-      margin: 20px 0;
+    label {
+      display: block;
+      margin-bottom: 12px;
+      font-size: 1.3rem;
+      font-weight: bold;
+      color: #ffd600;
     }
 
     input {
       padding: 10px;
       font-size: 1rem;
+      width: 200px;
       border-radius: 8px;
       border: none;
-      width: 200px;
       text-align: center;
     }
 
     button {
       margin: 10px;
       padding: 12px 20px;
-      font-size: 1rem;
+      font-size: 1.1rem;
       font-weight: bold;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      color: #fff;
-      background: #f57c00;
-      transition: 0.3s;
+      background: #ffd600;
+      color: #000;
     }
 
     button:hover {
-      background: #d94c0b;
+      background: #ffeb3b;
     }
 
-    .resultado {
-      font-size: 2rem;
-      margin: 20px 0;
+    #resultado {
+      font-size: 4rem;
       font-weight: bold;
+      margin: 20px 0;
       color: #ffd600;
     }
 
-    .sorteados {
-      margin: 20px auto;
+    #listaSorteados {
+      margin-top: 15px;
+      font-size: 1.2rem;
+      background: rgba(0, 0, 0, 0.5);
       padding: 15px;
-      background: rgba(0,0,0,0.3);
       border-radius: 10px;
-      max-width: 600px;
     }
 
-    /* Carrossel 4 imagens lado a lado */
-    .carousel-container {
-      margin: 30px auto;
-      width: 90%;
-      max-width: 1200px;
-      overflow: hidden;
+    #contador {
+      margin-top: 15px;
+      font-size: 1.3rem;
+      font-weight: bold;
+      color: #fff;
+    }
+
+    .carousel {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .carousel img {
+      width: 400px;
+      height: 400px;
+      object-fit: contain;
       border-radius: 12px;
       background: #fff;
       padding: 10px;
     }
 
-    .carousel-track {
-      display: flex;
-      transition: transform 0.5s ease-in-out;
-    }
-
-    .carousel-track img {
-      width: 400px;
-      height: 400px;
-      object-fit: cover;
-      margin: 0 5px;
-      border-radius: 8px;
-    }
-
     footer {
-      background: #222;
-      color: #ccc;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.8);
       padding: 15px;
+      margin-top: 20px;
       font-size: 0.9rem;
-      margin-top: 40px;
+    }
+
+    /* Bordas laterais listradas */
+    body::before, body::after {
+      content: "";
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      width: 25px;
+      background: repeating-linear-gradient(
+        45deg,
+        black,
+        black 15px,
+        yellow 15px,
+        yellow 30px
+      );
+      z-index: 999;
+    }
+
+    body::before {
+      left: 0;
+    }
+
+    body::after {
+      right: 0;
     }
   </style>
 </head>
 <body>
   <header>
-    <!-- Logo CIPA lado esquerdo -->
-    <img src="cipa.png" alt="Logo CIPA" class="logo-cipa">
-
-    <!-- Títulos -->
-    <div class="titulo">
-      <h1>SIPAT - Sorteador</h1>
-      <h2>Semana Interna de Prevenção de Acidentes de Trabalho</h2>
-    </div>
-
-    <!-- Capacete, luva e protetor lado direito -->
-    <img src="capacete.png" alt="Capacete Segurança" class="img-topo">
+    <img id="logoCipa" src="https://i.imgur.com/nHIkWnb.png" alt="Logo CIPA">
+    <h1>Sorteador Web - SIPAT 2025</h1>
+    <img id="equipamentos" src="https://i.imgur.com/7w3xN4V.png" alt="Capacete, luva e protetor auricular">
   </header>
 
   <main>
-    <div class="input-group">
-      <label for="maxParticipantes">Número máximo de participantes:</label><br>
-      <input type="number" id="maxParticipantes" min="1">
-    </div>
-
+    <label for="maxParticipantes">Número máximo de participantes:</label>
+    <input type="number" id="maxParticipantes" min="1" placeholder="Ex: 100">
+    <br>
     <button onclick="sortear()">Sortear</button>
     <button onclick="confirmarReset()">Resetar Sorteio</button>
 
-    <div class="resultado" id="resultado">---</div>
+    <div id="resultado">---</div>
+    <div id="contador">Números sorteados: 0 / 0</div>
+    <div id="listaSorteados">Nenhum número sorteado ainda.</div>
 
-    <div class="sorteados">
-      <h3>Números sorteados:</h3>
-      <p id="listaSorteados">Nenhum número sorteado ainda.</p>
-    </div>
-
-    <!-- Carrossel de patrocinadores -->
-    <div class="carousel-container">
-      <div class="carousel-track" id="carouselTrack">
-        <img src="patrocinador1.png" alt="Patrocinador 1">
-        <img src="patrocinador2.png" alt="Patrocinador 2">
-        <img src="patrocinador3.png" alt="Patrocinador 3">
-        <img src="patrocinador4.png" alt="Patrocinador 4">
-        <img src="patrocinador5.png" alt="Patrocinador 5">
-        <img src="patrocinador6.png" alt="Patrocinador 6">
-        <img src="patrocinador7.png" alt="Patrocinador 7">
-        <img src="patrocinador8.png" alt="Patrocinador 8">
-      </div>
-    </div>
+    <div class="carousel" id="carousel"></div>
   </main>
 
   <footer>
@@ -209,12 +178,28 @@
   <script>
     let sorteados = [];
     let max = 0;
+    let bloqueado = false;
+    let imagensPatrocinadores = [
+      "https://i.imgur.com/1.png",
+      "https://i.imgur.com/2.png",
+      "https://i.imgur.com/3.png",
+      "https://i.imgur.com/4.png",
+      "https://i.imgur.com/5.png",
+      "https://i.imgur.com/6.png",
+      "https://i.imgur.com/7.png",
+      "https://i.imgur.com/8.png"
+    ];
+    let indiceAtual = 0;
 
     function sortear() {
-      max = parseInt(document.getElementById('maxParticipantes').value);
-      if (!max || max < 1) {
-        alert("Digite um número válido de participantes.");
-        return;
+      if (max === 0) {
+        max = parseInt(document.getElementById('maxParticipantes').value);
+        if (!max || max < 1) {
+          alert("Digite um número válido de participantes.");
+          return;
+        }
+        document.getElementById('maxParticipantes').disabled = true;
+        bloqueado = true;
       }
 
       if (sorteados.length >= max) {
@@ -230,6 +215,7 @@
       sorteados.push(numero);
       document.getElementById('resultado').textContent = numero;
       document.getElementById('listaSorteados').textContent = sorteados.join(", ");
+      document.getElementById('contador').textContent = `Números sorteados: ${sorteados.length} / ${max}`;
     }
 
     function confirmarReset() {
@@ -244,24 +230,27 @@
     function resetar() {
       sorteados = [];
       max = 0;
+      bloqueado = false;
+      document.getElementById('maxParticipantes').disabled = false;
       document.getElementById('maxParticipantes').value = "";
       document.getElementById('resultado').textContent = "---";
       document.getElementById('listaSorteados').textContent = "Nenhum número sorteado ainda.";
+      document.getElementById('contador').textContent = "Números sorteados: 0 / 0";
     }
 
-    // Carrossel 4 imagens por vez
-    const track = document.getElementById("carouselTrack");
-    const slides = document.querySelectorAll(".carousel-track img");
-    const totalSlides = slides.length;
-    const visibleSlides = 4;
-    let index = 0;
-
-    function moveCarousel() {
-      index = (index + visibleSlides) % totalSlides;
-      track.style.transform = `translateX(-${index * 410}px)`;
+    function atualizarCarousel() {
+      let carousel = document.getElementById("carousel");
+      carousel.innerHTML = "";
+      for (let i = 0; i < 4; i++) {
+        let img = document.createElement("img");
+        img.src = imagensPatrocinadores[(indiceAtual + i) % imagensPatrocinadores.length];
+        carousel.appendChild(img);
+      }
+      indiceAtual = (indiceAtual + 4) % imagensPatrocinadores.length;
     }
 
-    setInterval(moveCarousel, 10000); // troca a cada 10s
+    setInterval(atualizarCarousel, 10000);
+    atualizarCarousel();
   </script>
 </body>
 </html>
