--- a/SIPAT/index.html
+++ b/SIPAT/index.html
@@ -3,254 +3,313 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sorteador Web - SIPAT 2025</title>
+  <title>SIPAT - Semana Interna de Prevenção de Acidentes do Trabalho</title>
+  
+ <!-- Importando a fonte Montserrat -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
+
   <style>
-    body {
+    /* Reset */
+    * {
       margin: 0;
-      font-family: Arial, sans-serif;
-      color: #fff;
-      background: #d35400 url('https://i.imgur.com/w3hYJ6X.png'); /* tijolinhos laranja */
-      background-size: 200px;
-      background-blend-mode: multiply;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    header {
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background: url("Design sem nome (1).png") no-repeat center center fixed;
+      background-size: cover;
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    /* ===================== CABEÇALHO ===================== */
+    header {
+      display: grid;
+      grid-template-columns: 1fr auto 1fr; /* esquerda | centro | direita */
       align-items: center;
-      background: rgba(0, 0, 0, 0.7);
-      margin: 15px;
-      padding: 15px;
+      height: 250px;
+      background: linear-gradient(90deg, #ff6600, #ff8533);
+      padding: 20px 40px;
+      margin: 10px;
       border-radius: 10px;
-      position: relative;
+      color: white;
     }
 
-    header img {
-      height: 100px;
-    }
-
-    #logoCipa {
-      width: 100px;
-      height: 100px;
-      object-fit: contain;
-    }
-
-    #equipamentos {
-      height: 100px;
-    }
-
-    main {
+    header h1 {
+      grid-column: 2;
+      font-size: 2rem;
+      font-weight: 800;
       text-align: center;
-      margin: 20px;
+      margin: 0;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
+    }
+
+    .logo-esquerda {
+  grid-column: 1;
+  display: flex;
+  justify-content: flex-start;
+}
+.logo-direita {
+  grid-column: 3;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.logo-esquerda img {
+  width: 350px;
+  height: 200px;
+  object-fit: contain;
+}
+.logo-direita img {
+  width: 150px;
+  height: 150px;
+  object-fit: contain;
+}
+
+    /* ===================== CORPO ===================== */
+    main {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 20px;
+      gap: 20px;
+    }
+
+    .conteudo-central {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 20px;
+    }
+
+    /* Sorteador */
+    .sorteador {
+      background: rgba(255,255,255,0.95);
+      padding: 20px;
+      border-radius: 20px;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.3);
+      text-align: center;
+      min-width: 400px;
+      max-width: 400px; /* largura fixa */
+      overflow-y: auto; /* barra de rolagem caso necessário */
     }
 
     label {
       display: block;
-      margin-bottom: 12px;
-      font-size: 1.3rem;
+      font-size: 18px;
       font-weight: bold;
-      color: #ffd600;
+      margin-bottom: 10px;
     }
 
-    input {
-      padding: 10px;
-      font-size: 1rem;
+    input[type="number"] {
+      padding: 8px;
       width: 200px;
-      border-radius: 8px;
-      border: none;
-      text-align: center;
+      font-size: 16px;
+      margin-bottom: 15px;
     }
 
     button {
-      margin: 10px;
-      padding: 12px 20px;
-      font-size: 1.1rem;
-      font-weight: bold;
+      padding: 10px 20px;
+      margin: 5px;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
-      background: #ffd600;
-      color: #000;
+      font-size: 16px;
+      font-weight: bold;
+      background: orange;
+      color: #fff;
+      transition: 0.3s;
     }
 
     button:hover {
-      background: #ffeb3b;
+      background: darkorange;
     }
 
     #resultado {
-      font-size: 4rem;
+      font-size: 48px;
       font-weight: bold;
       margin: 20px 0;
-      color: #ffd600;
     }
 
-    #listaSorteados {
+    #sorteados {
       margin-top: 15px;
-      font-size: 1.2rem;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 15px;
-      border-radius: 10px;
+      font-size: 16px;
+      text-align: left;
+      word-wrap: break-word;
     }
 
     #contador {
-      margin-top: 15px;
-      font-size: 1.3rem;
+      margin-top: 10px;
+      font-size: 16px;
       font-weight: bold;
-      color: #fff;
     }
 
+    /* ===================== CARROSSEL ===================== */
     .carousel {
       display: flex;
       justify-content: center;
-      align-items: center;
       gap: 20px;
       margin-top: 30px;
+      margin-bottom: 50px;
+      flex-wrap: wrap;
     }
 
     .carousel img {
       width: 400px;
       height: 400px;
       object-fit: contain;
-      border-radius: 12px;
-      background: #fff;
-      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 2px 2px 6px rgba(0,0,0,0.3);
     }
 
+    /* ===================== RODAPÉ ===================== */
     footer {
+      background: rgba(0,0,0,0.85);
+      color: #fff;
       text-align: center;
-      background: rgba(0, 0, 0, 0.8);
       padding: 15px;
-      margin-top: 20px;
-      font-size: 0.9rem;
-    }
-
-    /* Bordas laterais listradas */
-    body::before, body::after {
-      content: "";
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      width: 25px;
-      background: repeating-linear-gradient(
-        45deg,
-        black,
-        black 15px,
-        yellow 15px,
-        yellow 30px
-      );
-      z-index: 999;
-    }
-
-    body::before {
-      left: 0;
-    }
-
-    body::after {
-      right: 0;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
+
+  <!-- CABEÇALHO -->
   <header>
-    <img id="logoCipa" src="https://i.imgur.com/nHIkWnb.png" alt="Logo CIPA">
-    <h1>Sorteador Web - SIPAT 2025</h1>
-    <img id="equipamentos" src="https://i.imgur.com/7w3xN4V.png" alt="Capacete, luva e protetor auricular">
+    <div class="logo-esquerda">
+      <img src="Logopref2.png" alt="Logo Prefeitura">
+    </div>
+
+    <h1>SORTEADOR  <br> BRINDES SIPAT 2025</h1>
+
+    <div class="logo-direita">
+      <img src="nHIkWnb.png" alt="Logo CIPA">
+    </div>
   </header>
 
+  <!-- CORPO -->
   <main>
-    <label for="maxParticipantes">Número máximo de participantes:</label>
-    <input type="number" id="maxParticipantes" min="1" placeholder="Ex: 100">
-    <br>
-    <button onclick="sortear()">Sortear</button>
-    <button onclick="confirmarReset()">Resetar Sorteio</button>
+    <div class="conteudo-central">
+      <!-- Sorteador -->
+      <div class="sorteador">
+        <label for="maxParticipantes">Número máximo de participantes:</label>
+        <input type="number" id="maxParticipantes" min="1">
+        <br>
+        <button onclick="iniciarSorteio()">Confirmar</button>
+        <button onclick="sortear()">Sortear</button>
+        <button onclick="resetar()">Resetar</button>
 
-    <div id="resultado">---</div>
-    <div id="contador">Números sorteados: 0 / 0</div>
-    <div id="listaSorteados">Nenhum número sorteado ainda.</div>
-
-    <div class="carousel" id="carousel"></div>
+        <div id="resultado">---</div>
+        <div id="sorteados">Números sorteados: Nenhum</div>
+        <div id="contador">Total sorteios: 0</div>
+      </div>
+    </div>
   </main>
 
+  <!-- Carrossel -->
+  <div class="carousel" id="carousel">
+    <img src="pat1.png" alt="Patrocinador 1">
+    <img src="pat2.png" alt="Patrocinador 2">
+    <img src="pat3.png" alt="Patrocinador 3">
+    <img src="pat4.png" alt="Patrocinador 4">
+    <img src="pat5.png" alt="Patrocinador 5">
+    <img src="pat6.png" alt="Patrocinador 6">
+    <img src="pat7.png" alt="Patrocinador 7">
+    <img src="pat8.png" alt="Patrocinador 8">
+    <img src="pat9.png" alt="Patrocinador 9">
+    <img src="pat10.png" alt="Patrocinador 10">
+    <img src="pat11.png" alt="Patrocinador 11">
+    <img src="pat12.png" alt="Patrocinador 12">
+    <img src="pat13.png" alt="Patrocinador 13">
+    <img src="pat14.png" alt="Patrocinador 14">
+    <img src="pat15.png" alt="Patrocinador 15">
+    <img src="pat16.png" alt="Patrocinador 16">
+    <img src="pat17.png" alt="Patrocinador 17">
+    <img src="pat18.png" alt="Patrocinador 18">
+    <img src="pat19.png" alt="Patrocinador 19">
+  </div>
+
+  <!-- Rodapé -->
   <footer>
-    Sorteador Web desenvolvido pela Semana Interna de Prevenção de Acidentes de Trabalho de São João da Boa Vista - 2025
+    Sorteador Web desenvolvido pela Semana Interna de Prevenção de Acidentes de Trabalho da Prefeitura de São João da Boa Vista • CIPA Segurança • 2025
   </footer>
 
+  <!-- SCRIPT -->
   <script>
+    let participantes = [];
     let sorteados = [];
-    let max = 0;
-    let bloqueado = false;
-    let imagensPatrocinadores = [
-      "https://i.imgur.com/1.png",
-      "https://i.imgur.com/2.png",
-      "https://i.imgur.com/3.png",
-      "https://i.imgur.com/4.png",
-      "https://i.imgur.com/5.png",
-      "https://i.imgur.com/6.png",
-      "https://i.imgur.com/7.png",
-      "https://i.imgur.com/8.png"
-    ];
-    let indiceAtual = 0;
+    let sorteioAtivo = false;
+    let contador = 0;
+
+    function iniciarSorteio() {
+      const max = parseInt(document.getElementById("maxParticipantes").value);
+      if (isNaN(max) || max <= 0) {
+        alert("Digite um número válido de participantes.");
+        return;
+      }
+      participantes = Array.from({length: max}, (_, i) => i + 1);
+      sorteados = [];
+      sorteioAtivo = true;
+      contador = 0;
+      document.getElementById("sorteados").innerText = "Números sorteados: Nenhum";
+      document.getElementById("resultado").innerText = "---";
+      document.getElementById("contador").innerText = "Total sorteios: 0";
+      document.getElementById("maxParticipantes").disabled = true;
+    }
 
     function sortear() {
-      if (max === 0) {
-        max = parseInt(document.getElementById('maxParticipantes').value);
-        if (!max || max < 1) {
-          alert("Digite um número válido de participantes.");
-          return;
-        }
-        document.getElementById('maxParticipantes').disabled = true;
-        bloqueado = true;
+      if (!sorteioAtivo) {
+        alert("Primeiro confirme o número de participantes.");
+        return;
       }
-
-      if (sorteados.length >= max) {
+      if (sorteados.length >= participantes.length) {
         alert("Todos os números já foram sorteados!");
         return;
       }
-
-      let numero;
-      do {
-        numero = Math.floor(Math.random() * max) + 1;
-      } while (sorteados.includes(numero));
-
+      const index = Math.floor(Math.random() * participantes.length);
+      const numero = participantes.splice(index, 1)[0];
       sorteados.push(numero);
-      document.getElementById('resultado').textContent = numero;
-      document.getElementById('listaSorteados').textContent = sorteados.join(", ");
-      document.getElementById('contador').textContent = `Números sorteados: ${sorteados.length} / ${max}`;
-    }
-
-    function confirmarReset() {
-      let confirmacao = prompt("Digite SIM para confirmar o reset do sorteio:");
-      if (confirmacao && confirmacao.toUpperCase() === "SIM") {
-        resetar();
-      } else {
-        alert("Reset cancelado.");
-      }
+      contador++;
+      document.getElementById("resultado").innerText = numero;
+      document.getElementById("sorteados").innerText = "Números sorteados: " + sorteados.join(", ");
+      document.getElementById("contador").innerText = "Total sorteios: " + contador;
     }
 
     function resetar() {
+      if (!confirm("Tem certeza que deseja resetar o sorteio?")) return;
+      participantes = [];
       sorteados = [];
-      max = 0;
-      bloqueado = false;
-      document.getElementById('maxParticipantes').disabled = false;
-      document.getElementById('maxParticipantes').value = "";
-      document.getElementById('resultado').textContent = "---";
-      document.getElementById('listaSorteados').textContent = "Nenhum número sorteado ainda.";
-      document.getElementById('contador').textContent = "Números sorteados: 0 / 0";
+      sorteioAtivo = false;
+      contador = 0;
+      document.getElementById("resultado").innerText = "---";
+      document.getElementById("sorteados").innerText = "Números sorteados: Nenhum";
+      document.getElementById("contador").innerText = "Total sorteios: 0";
+      document.getElementById("maxParticipantes").disabled = false;
+      document.getElementById("maxParticipantes").value = "";
     }
 
-    function atualizarCarousel() {
-      let carousel = document.getElementById("carousel");
+    // Carrossel
+    const imagens = ["pat1.png","pat2.png","pat3.png","pat4.png","pat5.png","pat6.png","pat7.png","pat8.png"];
+    let indice = 0;
+
+    function atualizarCarrossel() {
+      const carousel = document.getElementById("carousel");
       carousel.innerHTML = "";
       for (let i = 0; i < 4; i++) {
-        let img = document.createElement("img");
-        img.src = imagensPatrocinadores[(indiceAtual + i) % imagensPatrocinadores.length];
+        const img = document.createElement("img");
+        img.src = imagens[(indice + i) % imagens.length];
         carousel.appendChild(img);
       }
-      indiceAtual = (indiceAtual + 4) % imagensPatrocinadores.length;
+      indice = (indice + 4) % imagens.length;
     }
 
-    setInterval(atualizarCarousel, 10000);
-    atualizarCarousel();
+    setInterval(atualizarCarrossel, 10000);
+    atualizarCarrossel();
   </script>
 </body>
 </html>
