--- a/index.html
+++ b/index.html
@@ -48,26 +48,26 @@
     }
 
     .logo-esquerda {
-      grid-column: 1;
-      display: flex;
-      justify-content: flex-start;
-    }
-    .logo-direita {
-      grid-column: 3;
-      display: flex;
-      justify-content: flex-end;
-    }
+  grid-column: 1;
+  display: flex;
+  justify-content: flex-start;
+}
+.logo-direita {
+  grid-column: 3;
+  display: flex;
+  justify-content: flex-end;
+}
 
-    .logo-esquerda img {
-      width: 350px;
-      height: 200px;
-      object-fit: contain;
-    }
-    .logo-direita img {
-      width: 150px;
-      height: 150px;
-      object-fit: contain;
-    }
+.logo-esquerda img {
+  width: 350px;
+  height: 200px;
+  object-fit: contain;
+}
+.logo-direita img {
+  width: 150px;
+  height: 150px;
+  object-fit: contain;
+}
 
     /* ===================== CORPO ===================== */
     main {
@@ -151,21 +151,17 @@
 
     /* ===================== CARROSSEL ===================== */
     .carousel {
-      width: 100%;
-      overflow: hidden;
-      position: relative;
-      margin: 40px 0;
-    }
-
-    .carousel-track {
       display: flex;
-      transition: transform 1s ease-in-out;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+      margin-bottom: 50px;
+      flex-wrap: wrap;
     }
 
     .carousel img {
-      width: 300px;
-      height: 200px;
-      margin: 0 15px;
+      width: 400px;
+      height: 400px;
       object-fit: contain;
       border-radius: 10px;
       box-shadow: 2px 2px 6px rgba(0,0,0,0.3);
@@ -216,28 +212,32 @@
   </main>
 
   <!-- Carrossel -->
-  <div class="carousel">
-    <div class="carousel-track" id="carouselTrack">
-      <img src="pat1.png" alt="Patrocinador 1">
-      <img src="pat2.png" alt="Patrocinador 2">
-      <img src="pat3.png" alt="Patrocinador 3">
-      <img src="pat4.jpg" alt="Patrocinador 4">
-      <img src="pat5.jpg" alt="Patrocinador 5">
-      <img src="pat6.png" alt="Patrocinador 6">
-      <img src="pat7.png" alt="Patrocinador 7">
-      <img src="pat8.png" alt="Patrocinador 8">
-      <img src="pat9.png" alt="Patrocinador 9">
-      <img src="pat10.png" alt="Patrocinador 10">
-      <img src="pat11.png" alt="Patrocinador 11">
-      <img src="pat12.png" alt="Patrocinador 12">
-      <img src="pat13.png" alt="Patrocinador 13">
-      <img src="pat14.png" alt="Patrocinador 14">
-      <img src="pat15.png" alt="Patrocinador 15">
-      <img src="pat16.png" alt="Patrocinador 16">
-      <img src="pat17.png" alt="Patrocinador 17">
-      <img src="pat18.png" alt="Patrocinador 18">
-      <img src="pat19.png" alt="Patrocinador 19">
-    </div>
+  <div class="carousel" id="carousel">
+    <img src="patrocinador1.JPEG" alt="Patrocinador 1">
+    <img src="patrocinador2.png" alt="Patrocinador 2">
+    <img src="patrocinador3.png" alt="Patrocinador 3">
+    <img src="patrocinador4.jpg" alt="Patrocinador 4">
+    <img src="patrocinador5.jpg" alt="Patrocinador 5">
+    <img src="patrocinador6.png" alt="Patrocinador 6">
+    <img src="patrocinador7.png" alt="Patrocinador 7">
+    <img src="patrocinador8.png" alt="Patrocinador 8">
+    <img src="patrocinador9.png" alt="Patrocinador 9">
+    <img src="patrocinador10.png" alt="Patrocinador 10">
+    <img src="patrocinador11.png" alt="Patrocinador 11">
+    <img src="patrocinador12.png" alt="Patrocinador 12">
+    <img src="patrocinador13.png" alt="Patrocinador 13">
+    <img src="patrocinador14.png" alt="Patrocinador 14">
+    <img src="patrocinador15.png" alt="Patrocinador 15">
+    <img src="patrocinador16.png" alt="Patrocinador 16">
+    <img src="patrocinador17.png" alt="Patrocinador 17">
+    <img src="patrocinador18.png" alt="Patrocinador 18">
+    <img src="patrocinador19.png" alt="Patrocinador 19">
+    <img src="patrocinador20.png" alt="Patrocinador 19">
+    <img src="patrocinador21.png" alt="Patrocinador 19">
+    <img src="patrocinador22.png" alt="Patrocinador 19">
+    <img src="patrocinador23.png" alt="Patrocinador 19">
+    <img src="patrocinador24.png" alt="Patrocinador 19">
+    <img src="patrocinador25.png" alt="Patrocinador 19">
   </div>
 
   <!-- Rodapé -->
@@ -299,21 +299,23 @@
       document.getElementById("maxParticipantes").value = "";
     }
 
-    // ===================== CARROSSEL =====================
-    const track = document.getElementById("carouselTrack");
-    const slides = document.querySelectorAll(".carousel img");
-    let index = 0;
-    const slideWidth = slides[0].clientWidth + 30; // largura + margem
+    // Carrossel
+    const imagens = ["patrocinador1.png","patrocinador2.png","patrocinador3.png","patrocinador4.png","patrocinador5.png","patrocinador6.png","patrocinador7.png","patrocinador8.png","patrocinador9.png","patrocinador10.png","patrocinador11.png","patrocinador12.png","patrocinador13.png","patrocinador14.png","patrocinador15.png","patrocinador16.png","patrocinador17.png","patrocinador18.png","patrocinador19.png","patrocinador20.png","patrocinador21.png","patrocinador22.png","patrocinador23.png","patrocinador24.png","patrocinador25.png"];
+    let indice = 0;
 
-    function moverCarrossel() {
-      index++;
-      if (index >= slides.length) {
-        index = 0;
+    function atualizarCarrossel() {
+      const carousel = document.getElementById("carousel");
+      carousel.innerHTML = "";
+      for (let i = 0; i < 4; i++) {
+        const img = document.createElement("img");
+        img.src = imagens[(indice + i) % imagens.length];
+        carousel.appendChild(img);
       }
-      track.style.transform = `translateX(${-index * slideWidth}px)`;
+      indice = (indice + 4) % imagens.length;
     }
 
-    setInterval(moverCarrossel, 10000); // troca a cada 10 segundos
+    setInterval(atualizarCarrossel, 10000);
+    atualizarCarrossel();
   </script>
 </body>
 </html>
