--- a/SIPAT/index.html
+++ b/SIPAT/index.html
@@ -242,7 +242,7 @@
 
   <!-- Rodapé -->
   <footer>
-    Sorteador Web desenvolvido pela Semana Interna de Prevenção de Acidentes de Trabalho da Prefeitura de São João da Boa Vista • CIPA Segurança • 2025
+    Sorteador Web desenvolvido para Semana Interna de Prevenção de Acidentes de Trabalho da Prefeitura de São João da Boa Vista • CIPA • 2025
   </footer>
 
   <!-- SCRIPT -->
@@ -319,3 +319,4 @@
   </script>
 </body>
 </html>
+
