--- a/index.html
+++ b/index.html
@@ -232,12 +232,29 @@
     <img src="patrocinador17.png" alt="Patrocinador 17">
     <img src="patrocinador18.png" alt="Patrocinador 18">
     <img src="patrocinador19.png" alt="Patrocinador 19">
-    <img src="patrocinador20.png" alt="Patrocinador 19">
-    <img src="patrocinador21.png" alt="Patrocinador 19">
-    <img src="patrocinador22.png" alt="Patrocinador 19">
-    <img src="patrocinador23.png" alt="Patrocinador 19">
-    <img src="patrocinador24.png" alt="Patrocinador 19">
-    <img src="patrocinador25.png" alt="Patrocinador 19">
+    <img src="patrocinador20.png" alt="Patrocinador 20">
+    <img src="patrocinador21.png" alt="Patrocinador 21">
+    <img src="patrocinador22.png" alt="Patrocinador 22">
+    <img src="patrocinador23.png" alt="Patrocinador 23">
+    <img src="patrocinador24.png" alt="Patrocinador 24">
+    <img src="patrocinador25.png" alt="Patrocinador 25">
+    <img src="patrocinador26.png" alt="Patrocinador 26">
+    <img src="patrocinador27.png" alt="Patrocinador 27">
+    <img src="patrocinador28.png" alt="Patrocinador 28">
+    <img src="patrocinador29.png" alt="Patrocinador 29">
+    <img src="patrocinador30.png" alt="Patrocinador 30">
+    <img src="patrocinador31.png" alt="Patrocinador 31">
+    <img src="patrocinador32.png" alt="Patrocinador 32">
+    <img src="patrocinador33.png" alt="Patrocinador 33">
+    <img src="patrocinador34.png" alt="Patrocinador 34">
+    <img src="patrocinador35.png" alt="Patrocinador 35">
+    <img src="patrocinador36.png" alt="Patrocinador 36">
+    <img src="patrocinador37.png" alt="Patrocinador 37">
+    <img src="patrocinador38.png" alt="Patrocinador 38">
+    <img src="patrocinador39.png" alt="Patrocinador 39">
+    <img src="patrocinador40.png" alt="Patrocinador 40">
+    <img src="patrocinador41.png" alt="Patrocinador 41">
+    <img src="patrocinador42.png" alt="Patrocinador 42">
   </div>
 
   <!-- Rodapé -->
@@ -300,7 +317,7 @@
     }
 
     // Carrossel
-    const imagens = ["patrocinador1.png","patrocinador2.png","patrocinador3.png","patrocinador4.png","patrocinador5.png","patrocinador6.png","patrocinador7.png","patrocinador8.png","patrocinador9.png","patrocinador10.png","patrocinador11.png","patrocinador12.png","patrocinador13.png","patrocinador14.png","patrocinador15.png","patrocinador16.png","patrocinador17.png","patrocinador18.png","patrocinador19.png","patrocinador20.png","patrocinador21.png","patrocinador22.png","patrocinador23.png","patrocinador24.png","patrocinador25.png"];
+    const imagens = ["patrocinador1.png","patrocinador2.png","patrocinador3.png","patrocinador4.png","patrocinador5.png","patrocinador6.png","patrocinador7.png","patrocinador8.png","patrocinador9.png","patrocinador10.png","patrocinador11.png","patrocinador12.png","patrocinador13.png","patrocinador14.png","patrocinador15.png","patrocinador16.png","patrocinador17.png","patrocinador18.png","patrocinador19.png","patrocinador20.png","patrocinador21.png","patrocinador22.png","patrocinador23.png","patrocinador24.png","patrocinador25.png","patrocinador26.png","patrocinador27.png","patrocinador28.png","patrocinador29.png","patrocinador30.png","patrocinador31.png","patrocinador32.png","patrocinador33.png","patrocinador34.png","patrocinador35.png","patrocinador36.png","patrocinador37.png","patrocinador38.png","patrocinador39.png","patrocinador40.png","patrocinador41.png","patrocinador42.png"];
     let indice = 0;
 
     function atualizarCarrossel() {
@@ -319,4 +336,5 @@
   </script>
 </body>
 </html>
+
 
