--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
     <img src="patrocinador40.png" alt="Patrocinador 40">
     <img src="patrocinador41.png" alt="Patrocinador 41">
     <img src="patrocinador42.png" alt="Patrocinador 42">
+    <img src="patrocinador43.png" alt="Patrocinador 43">
   </div>
 
   <!-- Rodapé -->
@@ -317,7 +318,7 @@
     }
 
     // Carrossel
-    const imagens = ["patrocinador1.png","patrocinador2.png","patrocinador3.png","patrocinador4.png","patrocinador5.png","patrocinador6.png","patrocinador7.png","patrocinador8.png","patrocinador9.png","patrocinador10.png","patrocinador11.png","patrocinador12.png","patrocinador13.png","patrocinador14.png","patrocinador15.png","patrocinador16.png","patrocinador17.png","patrocinador18.png","patrocinador19.png","patrocinador20.png","patrocinador21.png","patrocinador22.png","patrocinador23.png","patrocinador24.png","patrocinador25.png","patrocinador26.png","patrocinador27.png","patrocinador28.png","patrocinador29.png","patrocinador30.png","patrocinador31.png","patrocinador32.png","patrocinador33.png","patrocinador34.png","patrocinador35.png","patrocinador36.png","patrocinador37.png","patrocinador38.png","patrocinador39.png","patrocinador40.png","patrocinador41.png","patrocinador42.png"];
+    const imagens = ["patrocinador1.png","patrocinador2.png","patrocinador3.png","patrocinador4.png","patrocinador5.png","patrocinador6.png","patrocinador7.png","patrocinador8.png","patrocinador9.png","patrocinador10.png","patrocinador11.png","patrocinador12.png","patrocinador13.png","patrocinador14.png","patrocinador15.png","patrocinador16.png","patrocinador17.png","patrocinador18.png","patrocinador19.png","patrocinador20.png","patrocinador21.png","patrocinador22.png","patrocinador23.png","patrocinador24.png","patrocinador25.png","patrocinador26.png","patrocinador27.png","patrocinador28.png","patrocinador29.png","patrocinador30.png","patrocinador31.png","patrocinador32.png","patrocinador33.png","patrocinador34.png","patrocinador35.png","patrocinador36.png","patrocinador37.png","patrocinador38.png","patrocinador39.png","patrocinador40.png","patrocinador41.png","patrocinador42.png","patrocinador43.png"];
     let indice = 0;
 
     function atualizarCarrossel() {
@@ -336,5 +337,6 @@
   </script>
 </body>
 </html>
+
 
 
